* Changelog
I hope the current card / log format is flexible enough to accommodate
upcoming changes.

In case a update to the org sources is needed, I'll add a changelog
entry with updating instructions.

** [2020-06-28 Sun]
*** Added
- ~org-fc-before-review-hook~ that runs when a review session is started
** [2020-06-26 Fri]
*** Changed
- Messages are not inhibited during review
- Whitelisted drawers are expanded during review
*** Added
- A ~org-fc-after-review-hook~ that runs when the review ends / is quit
- ~org-fc-keymap-hint~ extension
- ~org-fc-audio~ extension
** [2020-06-25 Thu]
*** Added
- ~SCHEDULED: ...~, ~DEADLINE: ...~ timestamps are hidden during
  review
- Drawers in ~org-fc-drawer-whitelist~ are not hidden during review
*** Changed
- During the review process, two minor modes are used instead of two
  hydras
** [2020-05-24 Sun]
*** Changed
- Include file information in card index
- Maintain order of positions in a card when shuffling
** [2020-05-22 Fri]
*** Changed
- Exit hydra when review is started
** [2020-05-08 Fri]
*** Changed
- Per-context dashboard
- Improve org-indent of cards
- Use special "fc-demo" tag for demo cards
- Move opening of flip/rating hydras to main review loop
** [2020-05-01 Fri]
*** Internal
The AWK scripts now generate S-expressions instead of CSV tables, this
way ~read~ can be used to parse the data instead of relying on a set
of custom parsing functions.

This also allows passing more complex data structures from AWK to
org-fc.
** [2020-04-29 Wed]
Implemented a new version of the spacing algorithm (SM2) that's used
by org-fc.

The only difference is in how the next interval for cards rated as
"hard" is calculate.

The initial version (~'sm2-v1~) would decrease the ease factor by
0.15, then calculate the next interval by multiplying the previous
interval with the new ease factor.

In the new version (~'sm2-v2~), the interval is always multiplied by a
factor of 1.2, similar to the version of SM2 used by Anki.
